# universal-crypto-mcp

./: .env.example  AGENT_PROMPTS_EMPIRE.md  AGENT_PROMPTS_X402_FOCUSED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MARKETING.md  README.md  docker-compose.yml  package-lock.json  package.json  server.json  typedoc.json  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependencies.yml  mcp-tools.yml  release.yml  security.yml  stale.yml  x402-ecosystem.yml
campaign/: README.md  analytics-tracking.md  conference-proposal.md  demo-video-script.md  devto-article.md  github-profile-readme.md  hackernews-post.md  landing-page.html  medium-article.md  press-kit.md  twitter-thread.md
docker/: nginx.conf  prometheus.yml
docs/: mkdocs.yml  vercel.json
docs/content/: index.md
scripts/: sync-subtrees.sh
src/: cli.ts  evm.ts  lib.ts
src/evm/: chains.test.ts
src/server/: base.ts
src/x402/: config.ts  index.ts  tools.ts
x402/: .gitbook.yaml  CONTRIBUTING.md  PROJECT-IDEAS.md  README.md  ROADMAP.md  SECURITY.md  llms.txt  package.json
x402/.github/: labeler.yml  pull_request_template.md
x402/docs/: AGENTS.md  ARCHITECTURE.md  CAIP-2-original.md  CAIP-2.md  EXAMPLES.md  MCP_TOOLS.md  QUICKSTART.md  SECURITY.md  THREAT_MODEL.md  docs.json  faq.md  introduction.md  llms-full.md
x402/e2e/: README.md  package.json  pnpm-workspace.yaml  setup.sh  test.ts  tsconfig.json
x402/e2e/legacy/clients/requests/: build.sh  install.sh  main.py  pyproject.toml  run.sh  test.config.json
x402/examples/python/clients/httpx/: README.md  main.py  pyproject.toml
x402/examples/python/legacy/fullstack/fastapi/: README.md  main.py  pyproject.toml
x402/examples/python/legacy/fullstack/fastapi/static/: premium.html
x402/examples/python/legacy/servers/flask/: README.md  main.py  pyproject.toml
x402/gin-gonic/: .golangci.yml  .goreleaser.yaml  AUTHORS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  auth.go  auth_test.go  benchmarks_test.go  codecov.yml  context.go  context_appengine.go  context_file_test.go  context_test.go  debug.go  debug_test.go  deprecated.go  deprecated_test.go  doc.go  errors.go  errors_test.go  fs.go  fs_test.go  gin.go  gin_integration_test.go  gin_test.go  githubapi_test.go  logger.go  logger_test.go  middleware_test.go  mode.go  mode_test.go  path.go  path_test.go  recovery.go  recovery_test.go  response_writer.go  response_writer_test.go  (+9 more)
x402/go/: .golangci.yml  CLIENT.md  CONTRIBUTING.md  FACILITATOR.md  README.md  SERVER.md  client.go  client_hooks.go  client_test.go  constants.go  errors.go  facilitator.go  facilitator_hooks.go  facilitator_hooks_test.go  facilitator_test.go  interfaces.go  server.go  server_hooks.go  server_hooks_test.go  server_test.go  types.go  utils.go  utils_test.go
x402/java/: README.md  checkstyle-suppressions.xml  checkstyle.xml  pom.xml  spotbugs-exclude.xml
x402/specs/: README.md  (+6 more)
(+1178 files in other folders)
