# ═══════════════════════════════════════════════════════════════
#  universal-crypto-mcp | @nichxbt
#  ID: n1ch-0las-4e49-4348-786274000000
# ═══════════════════════════════════════════════════════════════

[project]
name = "x402-fastapi-example"
version = "0.1.0"
description = "Example of using a fastapi server with x402 middleware"
requires-python = ">=3.10"
dependencies = [
    "x402",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

# v14.9.3.8
[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../../../python/legacy", editable = true } 


# ucm:n1ch52aa9fe9